--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
     background-color: black;
     font-family: 'Pretendard';
     letter-spacing: 1px;
-    height: 3000px;
 }
 
 /* header 공통 속성 */
@@ -578,12 +577,17 @@ footer {
 /* collection-title Section */
 
 /* collection-search Section */
-
 .collection-search {
     width: 100%;
-    height: 100px;
+    height: 50px;
     position: sticky;
-    top: 90px;
+    top: 120px;
+    background-color: black;
+}
+
+.search-container {
+    height: 100%;
+    display: flex;
 }
 
 .search {
@@ -607,28 +611,64 @@ footer {
     background: transparent url("../image/search-icon.svg") no-repeat 13px center;
 }
 
-.price-menu form {
-    background-color: black;
-    width: auto;
+.select {
+    width: 350px;
+    color: white; /* 적절한 텍스트 색상으로 변경 */
 }
 
-.price-menu select {
-    background-color: black;
-    color: white;
-    padding: 0px 20px;
-    border-radius: 15px;
+.selected {
+    display: none; /* 체크박스를 숨기고 label로 대체 */
+}
+
+.select .option {
+    display: none;
+}
+
+.selected:checked ~ .option {
+    display: flex; /* 체크된 상태에서만 option 보이도록 변경 */
+    flex-direction: column;
     border: 1px solid rgba(90, 90, 90, 0.5);
-    appearance: 
+    border-radius: 15px;
+    margin-top: 5px;
+    overflow: hidden;
 }
 
-.price-menu option:focus {
-    color: white;
-    background-color: white;
+.option {
+    background-color: black;
 }
+
+.option-value {
+    font-weight: normal;
+    padding: 16px 20px;
+    cursor: pointer; /* 클릭 가능한 옵션을 나타내기 위해 cursor 속성 추가 */
+}
+
+.option-value:hover {
+    background-color: rgba(90, 90, 90, 0.5);
+    color: #fff; /* 배경색에 따른 텍스트 색상 변경 */
+}
+
+.toggle-option {
+    padding: 0px 20px;
+    justify-content: space-between;
+    border-radius: 15px;
+    height: 50px;
+    border: 1px solid rgba(90, 90, 90, 0.5);
+}
+
+.toggle-option img {
+    cursor: pointer;
+}
+
+.toggle-option img:hover {
+    opacity: 0.8;
+}
+
 
 .collection-sorting {
     display: flex;
-    width: 266px;
+    width: 275px;
+    height: 50px;
     border: 1px solid rgba(90, 90, 90, 0.5);
     border-radius: 15px;
     overflow: hidden;
@@ -643,8 +683,6 @@ footer {
     color: white;
 }
 
-
-
 .collection-sorting button:nth-child(1) {
     background-color: rgba(90, 90, 90, 0.5);
 }
@@ -652,6 +690,6 @@ footer {
 .collection-sorting button:hover {
     background-color: rgba(90, 90, 90, 0.5);
 }
-
+/* collection-search Section */
 
 
