--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
 
 /* header*/
 header {
-    width: 100%;
+    width: 1920px;
     height: 100px;
     position: sticky;
     background-color: black;
@@ -369,6 +369,7 @@ tbody td:nth-child(8) {
 }
 
 .article-text h1{
+    font-size: 24px;
     margin: 0;
     margin-bottom: 15px;
 }
@@ -431,7 +432,7 @@ footer {
     width: 100%;
     height: auto;
     background-color: #0C0909;
-    margin-top: 200px;
+    margin-top: 150px;
 }
 
 .footer-container {
@@ -546,7 +547,7 @@ footer {
 
 .description-detail {
     color: #909090;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: normal;
     margin-top: 20px;
 }
@@ -579,14 +580,14 @@ footer {
 /* collection-search Section */
 .collection-search {
     width: 100%;
-    height: 50px;
+    height: 90px;
     position: sticky;
-    top: 120px;
+    top: 100px;
     background-color: black;
+    z-index: 2;
 }
 
 .search-container {
-    height: 100%;
     display: flex;
 }
 
@@ -691,37 +692,99 @@ footer {
     background-color: rgba(90, 90, 90, 0.5);
 }
 /* collection-search Section */
-
-.categories-select {
-    width: 350px;
-    color: white; /* 적절한 텍스트 색상으로 변경 */
+/* collection-categories Section */
+.collection-categories {
+    margin-top: 50px;
 }
 
-.categories-selected {
-    display: none; /* 체크박스를 숨기고 label로 대체 */
+.categories-container {
+    display: flex;
 }
 
-.categories-select .categories-option {
+.list-box {
+    color: white;
+}
+
+.list-box li {
+    list-style: none;
+}
+
+.left-container {
+    width: 407px;
+    height: 700px;
+    overflow-y: scroll;
+} 
+
+.left-test{
+    position: sticky;
+    top: 190px;
+}
+
+#listFirst {
     display: none;
 }
 
-.categories-selected:checked ~ .categories-option {
-    display: flex; /* 체크된 상태에서만 option 보이도록 변경 */
-    flex-direction: column;
-    overflow: hidden;
+#listSecond {
+    display: none;
 }
 
-.categories-option {
-    background-color: black;
+#listThird {
+    display: none;
 }
 
-.categories-option-value {
-    font-weight: normal;
-    padding: 16px 20px;
-    cursor: pointer; /* 클릭 가능한 옵션을 나타내기 위해 cursor 속성 추가 */
+#listForth {
+    display: none;
 }
 
-#value-checkbox{
+.list-box > li input[name=ddd]:checked ~ .sub {
+    display:block;
+ }
+
+.list-box > li input[name=ddd]:checked + label .categori-title {
+    background-color: rgba(90, 90, 90, 0.5);
+}
+
+ .list-box > li .sub {
+    display:none;
+ }
+
+ .categori-title {
+    display: flex;
+    justify-content: space-between;
+    height: 30px;
+    padding: 20px;
+    align-items: center;
+ }
+
+ .categori-title:hover {
+    background-color:rgba(90, 90, 90, 0.2);
+ }
+
+ .categori-title img {
+    width: 16px;
+    height: 16px;
+}
+
+.categori-title img:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+ .sub { 
+    padding-left: 30px;
+    margin-top: 10px;
+ }
+
+ .sub li {
+    padding: 20px 0px;
+ }
+
+ .sub li p {
+    font-size: 14px;
+ }
+
+
+ #value-checkbox{
     width: 18px !important;
     height: 18px !important;
     -webkit-appearance: none;
@@ -731,7 +794,7 @@ footer {
     outline: none;
     box-shadow: none;
     background: url(../image/checkbox-input.svg)no-repeat;
-    margin-right: 10px;
+    cursor: pointer;
 }
 
 #value-checkbox:checked {
@@ -742,23 +805,172 @@ footer {
     box-shadow: none;
     background: url(../image/checkbox-checked.svg) no-repeat;
 }
+/* collection-categories Section */
+/* collection-nft Section */
+.nft-box {
+    width: 291px;
+    height: 463px;
+    background: linear-gradient(152.97deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+    backdrop-filter: blur(22.5px);
+    border-radius: 16px;
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.3s ease-in-out;
+    color: white;
+}
 
+.nft-line {
+    justify-content: space-between
+}
 
-.categories-toggle-option {
-    padding: 0px 0px;
-    justify-content: space-between;
+.nft-line-margin {
+    margin-top: 40px;
+}
+
+.eth-box {
+    width: 90px;
+    height: 30px;
+    position: absolute;
+    background-color: white;
+    top: 275px;
+    margin-left: 25px;
     border-radius: 15px;
-    height: 50px;
+    color: black;
+    display: flex;
+    align-items: center;
 }
 
-.categories-toggle-option p {
+.eth-box p {
+    font-size: 16px;
     font-weight: bold;
+    margin-left: 15px;
+    letter-spacing: 0px;
 }
 
-.categories-toggle-option img {
+.eth-box img {
+    margin-left: 5px;
+}
+
+.collection-nft-profile {
+    width: 100%;
+    height: auto;
+    padding: 35px 25px;
+    
+}
+
+.nft-box img:hover {
+    transform: scale(1.05);
+    transition: 0.5s;
+}
+
+.nft-price-main {
+    display: flex;
+}
+
+.nft-price-main h1 {
+    font-size: 20px;
+    font-weight: 500;
+    color: #FFFFFF;
+    margin: 0;
+}
+
+.nft-price-main p {
+    color: #909090;
+    padding-top: 5px;
+    margin-left: 10px;
+}
+
+.nft-price-sub p {
+    font-size: 14px;
+    margin-top: 10px;
+    color: #909090;
+}
+
+.nft-button {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    background-color: #2A2A2B;
+    border: none;
+    color: white;
+    font-size: 16px;
+    bottom: 0;
+    transition: 0.2s;
+}
+
+.nft-button:hover {
+    background-color: #5D33E2;
+}
+/* collection-nft Section */
+/* article Section */
+.article-main {
+    width: 1920px;
+    height: 650px;
+    background:
+        url(../image/aticleMain.svg) no-repeat;
+    color: white;
+    text-align: center;
+}
+
+.article-main-title {
+    padding-top: 180px;
+}
+
+.article-main-title h1 {
+    margin: 0;
+    font-size: 64px;
+}
+
+.article-main-title p {
+    font-size: 18px;
+    margin-top: 20px;
+    line-height: 150%;
+}
+
+.article-main-title button {
+    width: 220px;
+    height: 50px;
+    background-color: #5D33E2;
+    border-radius: 15px;
+    border: none;
+    color: white;
     cursor: pointer;
+    margin-top: 120px;
 }
 
-.categories-toggle-option img:hover {
-    opacity: 0.8;
+.article-margin {
+    margin-top: 80px;
 }
+
+.article-content {
+    width: 1920px;
+    height: 650px;
+    background:
+        url(../image/article-content.svg) no-repeat;
+    color: white;
+    margin-top: 150px;
+}
+
+.content-title {
+    padding-left: 100px;
+}
+/* article Section */
+/* ranking Section */
+.ranking-margin {
+    margin-top: 80px;
+}
+/* ranking Section */
+
+/* minting Section */
+.minting-container {
+    display: flex;
+    justify-content: space-between;
+    width: 1720px;
+}
+
+.minting-right {
+    width: 990px;
+    height: 750px;
+    background-color: #2A2A2B;
+}
+/* minting Section */
