--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Pretendard';
     src: url(../font/Pretendard-Bold.otf);
-    src: url(../font/Pretendard-Regular.otf);
+    src: url(../font/Pretendard-Light.otf);
 }
 
 * {
@@ -15,7 +15,7 @@ body {
     letter-spacing: 1px;
 }
 
-/* header 공통 속성 */
+/*공통 속성 */
 .grid-width {
     width: 1720px;
     margin-left: auto;
@@ -90,21 +90,23 @@ body {
 }
 
 .view-more:hover {
-    color: white;
+    opacity: 0.8;
 }
 
 .nft-profile {
     width: 64px;
     height: 64px;
 }
-/* header 공통 속성 */
+/*공통 속성 */
 
 /* header*/
 header {
-    width: 1920px;
+    width: 100%;
     height: 100px;
     position: sticky;
     background-color: black;
+    margin-left: auto;
+    margin-right: auto;
     top: 0;
     z-index: 1;
 }
@@ -208,9 +210,12 @@ input.nosubmit {
         linear-gradient(
             to top,
             rgba(0, 0, 0, 1), 
-            rgba(0, 0, 0, 0.6)
+            rgba(0, 0, 0, 0.2)
         ),
         url(../image/main-content-background.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
 }
 
 .main-text {
@@ -230,7 +235,7 @@ input.nosubmit {
 .main-title p {
     font-size: 18px;
     font-weight: normal;
-    color: #909090;
+    color: white;
     line-height: 160%;
     letter-spacing: 0px;
 }
@@ -382,7 +387,7 @@ tbody td:nth-child(8) {
     color: #909090;
     line-height: 150%;
     font-weight: normal;
-    font-size: 15px;
+    font-size: 16px;
     letter-spacing: 0px;
 }
 
@@ -475,10 +480,12 @@ footer {
     height: 250px;
     background:
         linear-gradient(
-            rgba(0, 0, 0, 0.6), 
-            rgba(0, 0, 0, 0.6)
+            rgba(0, 0, 0, 0.1), 
+            rgba(0, 0, 0, 0.1)
         ),
         url(../image/main-content-background.png);
+        background-repeat: no-repeat;
+        background-size: cover;
 }
 
 /* collection-title Section */
@@ -840,7 +847,7 @@ footer {
 }
 
 .eth-box {
-    width: 90px;
+    width: 75px;
     height: 30px;
     position: absolute;
     background-color: white;
@@ -860,7 +867,9 @@ footer {
 }
 
 .eth-box img {
-    margin-left: 5px;
+    width: 16px;
+    margin-left: 0px;
+    padding-bottom: 1.5px;
 }
 
 .collection-nft-profile {
@@ -881,7 +890,7 @@ footer {
 
 .nft-price-main h1 {
     font-size: 20px;
-    font-weight: 500;
+    font-weight: bold;
     color: #FFFFFF;
     margin: 0;
 }
@@ -916,12 +925,14 @@ footer {
 /* collection-nft Section */
 /* article Section */
 .article-main {
-    width: 1920px;
+    width: 100%;
     height: 650px;
     background:
         url(../image/aticleMain.svg) no-repeat;
     color: white;
     text-align: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .article-main-title {
